--- a/trunk/video_player/FFmpeg/Makefile.MSYS
+++ b/trunk/video_player/FFmpeg/Makefile.MSYS
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -DWIN32 -DUNICODE -DWINVER=0x0500 -D_inline -DBUILD_VIDEO_PLAYER -D__STDC_CONSTANT_MACROS -W -O3 -Iinclude -I../../include -c
-LDFLAGS = -Llib-win32 -L../../bin-win32 -static-libgcc -s -lmingw32 -lavformat -lavcodec -lavutil -lswscale -lONSlaught -lOpenAL32 -shared
+LDFLAGS = -Llib-win32 -L../../bin-win32 -static -static-libgcc -static-libstdc++ -s -lmingw32 -lavformat -lavcodec -lavutil -lswscale -lONSlaught -shared
 
 all: objs removed_includes bin-win32/video_player.dll
 
@@ -14,7 +14,7 @@ removed_includes:
 objs:
 	mkdir objs
 
-bin-win32/video_player.dll: objs/video_player.o objs/common.o objs/font.o ../../bin-win32/libONSlaught.a
+bin-win32/video_player.dll: objs/video_player.o objs/common.o objs/font.o objs/Thread.o ../../bin-win32/libONSlaught.a
 	$(CXX) $^ $(LDFLAGS) -o bin-win32/video_player.dll
 
 ../../bin-win32/libONSlaught.a:
@@ -25,4 +25,6 @@ objs/video_player.o: video_player.cpp
 objs/common.o: ../common.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@
 objs/font.o: ../font.cpp
+	$(CXX) $(CXXFLAGS) $< -o $@
+objs/Thread.o: ../../src/Thread.cpp
 	$(CXX) $(CXXFLAGS) $< -o $@
