--- a/video_player/FFmpeg/CMakeLists.txt
+++ b/video_player/FFmpeg/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.4.7)
 project(video_player)
 
-include_directories(../include)
+include_directories(../../include)
 
 set(EXECUTABLE_OUTPUT_PATH .)
 set(CMAKE_BUILD_TYPE Release)
@@ -19,6 +19,7 @@ add_library(video_player SHARED
 	video_player.cpp
 	../common.cpp
 	../font.cpp
+	../../src/Thread.cpp
 )
 
 target_link_libraries(video_player ${LIBS})
